# Qor-Chat

./: .dockerignore  .env  .gitignore  README.md  eslint.config.js  index.html  knip.json  pnpm-workspace.yaml  test-opaque-worker.js  test-opaque.js  test-ws-login.js  vite.config.simple.ts
.cargo/: config.toml
config/: package.json  vite.config.ts
docker/: Dockerfile.loadbalancer  Dockerfile.redis  Dockerfile.server  docker-compose.yml
docs/: CONTRIBUTING.md  ENVIRONMENT_VARIABLES.md
docs/app/: AUTHENTICATION.md  AVATARS.md  BLOCKING.md  COMPUTATIONAL_PIR.md  DISCOVERY.md  HYBRID_KEYS_AND_BUNDLES.md.md  MESSAGING.md  MESSAGING_CRYPTOGRAPHY.md  OFFLINE_MESSAGING.md  PIR_WORKER.md  USERNAME_ENUMERATION_RESISTANCE.md
docs/legal/: PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
scripts/: admin-auth.js  build-pir-client-native.cjs  build-pir-client.cjs  build-ypir-client.cjs  ensure-pir-worker-binaries.cjs  generate_tls.cjs  install-deps.cjs  start-client.cjs  start-docker.cjs  start-loadbalancer.cjs  start-server.cjs  verify-pir-worker-pin.cjs
server/: server.js  signals.js
server/authentication/: anonymous-session-service.js  auth-utils.js  authentication.js  gatekeeper.js  privacy-pass-server.js  zk-verifier.js
server/bootstrap/: server-bootstrap.js
server/cluster/: cluster-integration.js  cluster-manager.js
server/config/: config.js  constants.js  secure-credentials.js
server/crypto/: crypto-logger.js  helpers.js  opaque-service.js  oprf-discovery.js  unified-crypto.js
server/database/: avatar-blob-db.js  blocking-db.js  bundle-db.js  core.js  database.js  discovery-db.js  message-db.js  schema.js  user-db.js
server/diagnostics/: runtime-monitor.js
server/discovery/: publication-privacy.js  snapshot-service.js
server/handlers/: blocking-handlers.js  core.js  inbox-handlers.js  key-handlers.js  message-handlers.js  offline-handlers.js  pir-handlers.js  signal-handlers.js
server/load-balancer/: auto-loadbalancer.js  haproxy-config-generator.js  lb-command-listener.js  tor-manager.js
server/messaging/: libsignal-handler.js  pq-envelope-handler.js
server/pir/: opaque-discovery-source-records.js  page-layout.js  pir-databases.js  pir-worker-client.js  ypir-tier2.js
server/rate-limiting/: distributed-rate-limiter.js  rate-limit-middleware.js
server/routes/: api-routes.js  auth-routes.js  cluster-routes.js
server/routing/: blind-router.js  capability-tokens.js  destination-selector-policy.js  message-padding.js  sealed-sender.js  spool-snapshot-service.js  timing-protection.js
server/security/: blind-signatures.js  layer-agreement-policy.js  logging.js
server/session/: connection-state.js  pq-session-storage.js  redis-client.js  (+1 more)
src/: index.css  main.tsx  trusted-types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: qor-pir-client  qor-pir-worker  ypir-client
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: com.qor.chat.metainfo.xml
src-tauri/src/: database.rs  error.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  file.rs  link.rs  mod.rs  notification.rs  p2p.rs  pir.rs  session.rs  signal.rs  spool.rs  storage.rs  system.rs  tor.rs  websocket.rs
src-tauri/src/crypto/: aead.rs  hash.rs  mod.rs  post_quantum.rs  random.rs
src-tauri/src/network/: p2p.rs  websocket.rs
src-tauri/src/signal_protocol/: mod.rs  store.rs
src-tauri/src/storage/: file.rs  mod.rs
src-tauri/src/system/: mod.rs  notification.rs  power.rs  screen_capture.rs  tray.rs
src-tauri/src/tor/: mod.rs
(+218 files in other folders)
