[package]
name = "qor"
version = "1.0.0"
description = "Secure messaging application"
authors = ["galacticoderr"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "qor_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "devtools", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full", "sync", "time", "process", "fs", "io-util", "net", "rt-multi-thread", "macros"] }
futures = "0.3"
async-trait = "0.1"

# Cryptography
aes-gcm = { version = "0.10", features = ["aes"] }
chacha20poly1305 = "0.10"
sha3 = "0.10"
sha2 = "0.10"
blake3 = { version = "1", features = ["traits-preview"] }
hkdf = "0.12"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
fips204 = "0.4"

# Random number generation
rand = "0.9"
getrandom = { version = "0.3", features = ["std"] }

# Constant-time operations
subtle = { version = "2", features = ["std"] }

# Secure memory zeroing
zeroize = { version = "1", features = ["derive", "std"] }

# Networking
tokio-tungstenite = { version = "0.24", features = ["native-tls", "rustls-tls-native-roots"] }
native-tls = "0.2"
tokio-socks = "0.5"
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
iroh = "0.96"
n0-future = "0.1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks", "gzip"] }
url = "2"

# System integration
notify-rust = "4"
open = "5"
dirs = "5"
hostname = "0.4"

# Database
rusqlite = { version = "0.32.1", features = ["bundled-sqlcipher"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
flate2 = "1"
parking_lot = "0.12"
regex = "1"
lazy_static = "1"
futures-util = "0.3"
whoami = "1"
tar = "0.4"
scraper = "0.22"
sysinfo = "0.30"

# Signal Protocol
[dependencies.libsignal-protocol]
git = "https://github.com/signalapp/libsignal"
branch = "main"

[dependencies.libsignal-core]
git = "https://github.com/signalapp/libsignal"
branch = "main"

[dependencies.signal-crypto]
git = "https://github.com/signalapp/libsignal"
branch = "main"

# Platform-specific screen capture
[target.'cfg(target_os = "linux")'.dependencies]
scrap = "0.5"
x11rb = "0.13"
webkit2gtk = "=2.0.2"

[target.'cfg(target_os = "windows")'.dependencies]
scrap = "0.5"
windows = { version = "0.58", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
scrap = "0.5"
core-graphics = "0.23"

# Unix signals
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

# Windows API
[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["libloaderapi", "winuser", "winbase"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
